@@ -64,11 +64,10 @@ client. Here's an example:
     ...
 
 katriawm publishes some of its internal state as a property on the root
-window. You can use this to draw a "pager". I suggest using lemonbar or
-my own bevelbar:
+window. You can use this to draw a "pager". I wrote bevelbar to be used
+together with katriawm, its look matches katriawm's default theme:
 
     https://github.com/vain/bevelbar
-    https://github.com/LemonBoy/bar
 
 A tool, which you can use in your ~/.xinitrc to read and evaluate that
 property, is provided:
