@@ -1,5 +1,10 @@
 Release history for katriawm
 
+next
+  [Changed]
+  - All code specific to lemonbar has been removed, since it has been
+    unmaintained for over a year.
+
 v16.12  2016-12-31
   - Minor maintenance release. No user-visible changes. I just wanted a
     clean start for 2017. :-)
